# digital-archive

./: .gitignore  manage.py  pyproject.toml
crawler/: crawl_runner.py  forms.py  models.py  views.py
crawler/management/commands/: extract_screenshots.py  finish_crawls.py
crawler/migrations/: 0001_initial.py  0002_crawl_container_id_crawl_wacz_archive.py  0003_alter_crawl_options.py  0004_crawl_wacz_file_size.py  0005_crawlconfiguration_allow_hash_urls_and_more.py  0006_browserprofile_crawlconfiguration_browser_profile.py  0007_crawl_screenshot.py
crawler/templates/crawler/: browserprofile_confirm_delete.html  browserprofile_form.html  browserprofile_list.html  crawl_detail.html  crawl_list.html  crawlconfiguration_confirm_delete.html  crawlconfiguration_detail.html  crawlconfiguration_form.html  crawlconfiguration_list.html
digital_archive/: asgi.py  settings.py  urls.py  wsgi.py
static/: crawl-detail.css  crawl-detail.js  crawl-list.css  sw.js
templates/: base.html
templates/registration/: login.html
