[project]
name = "digital-archive"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "django>=6.0.3",
    "django-crispy-forms>=2.6",
    "django-tasks-db>=0.12.0",
    "docker>=7.1.0",
    "gunicorn>=25.2.0",
    "psycopg[binary]>=3.3.3",
    "warcio>=1.7.5",
    "werkzeug>=3.1.6",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
]
